Bug 364128 - Open without an active document uses home location instead of last open/file location
Summary: Open without an active document uses home location instead of last open/file ...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 16.04.1
Platform: Kubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-09 07:13 UTC by edA-qa mort-ora-y
Modified: 2016-09-07 19:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description edA-qa mort-ora-y 2016-06-09 07:13:43 UTC
File|Open always goes back to the home folder if there is no current document. Previously it would open at the previous location, which seems more correct -- especially after a Close All operation.

Reproducible: Always

Steps to Reproduce:
1. Open a file
2. Close all files
3. Choose Open

Actual Results:  
Home folder is presented

Expected Results:  
Previous open folder 

Version 15.12.3
KDE 5.18.0
Comment 1 Buovjaga 2016-07-10 10:34:26 UTC
Confirmed.

Arch Linux 64-bit
Kate 16.04.2
KDE Frameworks 5.23.0
Qt 5.7
xcb wm
Comment 2 Christoph Cullmann 2016-09-07 19:00:40 UTC
Git commit 2daae41a3738cc319f5925a96d3938779b3bd09b by Christoph Cullmann.
Committed on 07/09/2016 at 18:59.
Pushed by cullmann into branch 'master'.

use last location of open file dialog instead of home if current document has no valid url (e.g. untitled)

Bug 364128 - Open without an active document uses home location instead of last open/file location

fixes btw. open of file without name, as toLocalFile() needs a guard

M  +24   -19   kate/kateviewmanager.cpp
M  +14   -9    kate/kateviewmanager.h

http://commits.kde.org/kate/2daae41a3738cc319f5925a96d3938779b3bd09b