use last location of open file dialog instead of home if current document has no valid url (e.g. untitled)

Bug 364128 - Open without an active document uses home location instead of last open/file location

fixes btw. open of file without name, as toLocalFile() needs a guard

BUG: 364128